--- a/packages/sdk-react/package.json
+++ b/packages/sdk-react/package.json
@@ -38,7 +38,7 @@
     "react": "^16.8.0-0 || ^17.0.0-0 || ^18.0.0-0"
   },
   "dependencies": {
-    "@growthbook/growthbook": "^1.0.1"
+    "@growthbook/growthbook": "1.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
